aarlo/pyaarlo
0.6.18: Fix siren_on service call when entity_id is an Arlo ultra camera
0.6.17: Add request_snapshot webservice
0.6.16: Fix last_image so lovelace card works
        Arlo Baby: fix effect switching
0.6.15: Copied services into aarlo domain
0.6.14: Added unique keys
        Fixed cry detection
0.6.13: Tidy default alarm modes
0.6.12: Added schedule parsing and monitoring
0.6.11: Added brightness for lamps, fixed alarm issue
0.6.10: Add nightlamp support and cry detection for Arlo Baby.
0.6.9: Add object detected to last_captured sensor
0.6.8: Siren support for VMB4500r2
0.6.7: Arlo Baby media player support.
0.6.6: fixed close, added code for alarms
0.6.5: initial video doorbell support
0.6.4: fixed versioning
0.6.3: added support for HA 103
0.6.2: added aarlo_(start|stop)_recording service
0.6.1: added last thumbnail url
0.6.0: New revision

aarlo:
0.5.11: add save video request
0.5.10: add video_url to status
0.5.9: mirror pyaarlo version
0.5.8: mirror pyaarlo version
0.5.7: fixed crash in handle_async_mjpeg_stream
0.5.6: mirror pyaarlo version
0.5.5: Rename 'object' variable in library
0.5.4: Fix missing ATTR_ENTITY_ID
0.5.3: Tidied up battery and wired status
0.5.2: Fixed wired status
0.0.18: mirror pyaarlo version
0.0.17: Turn siren off when disabling, add siren on/off service calls.
0.0.16: Allow https pool parameters to be customized.
0.0.15: Mode API fixes and optional device list refresh
0.0.14: Added battery and signal strength for doorbells
0.0.13: Fix camera.(enable|disable)_motion service.
0.0.12: Fixed stream_source() api
0.0.11: Tidied docs, fleshed out services list.
0.0.10: Added support for schedules.
0.0.9: mirror pyaarlo version
0.0.8: mirror pyaarlo version
0.0.7: mirror pyaarlo version
0.0.6: mirror pyaarlo version
0.0.5: mirror pyaarlo version
0.0.4: mirror pyaarlo version

pyaarlo:
0.5.11: add save video request
0.5.10: mirror aarlo version
0.5.9: get devices after login
0.5.8: improved exception reporting